fixed bug  for types string id filtering by category

--- a/src/app/components/section/filters-item/filters-item.component.html
+++ b/src/app/components/section/filters-item/filters-item.component.html
@@ -7,30 +7,30 @@
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <mat-checkbox (change)="onCategoryChange(2, $event.checked)">Livres</mat-checkbox>
+              <mat-checkbox (change)="onCategoryChange('2', $event.checked)">Livres</mat-checkbox>
             </mat-panel-title>
           </mat-expansion-panel-header>
           <mat-list>
             <mat-list-item>
-              <mat-checkbox (change)="onCategoryChange(4, $event.checked)">Anciens</mat-checkbox>
+              <mat-checkbox (change)="onCategoryChange('5', $event.checked)">Langue Anglaise</mat-checkbox>
             </mat-list-item>
             <mat-list-item>
-              <mat-checkbox (change)="onCategoryChange(5, $event.checked)">Récents</mat-checkbox>
+              <mat-checkbox (change)="onCategoryChange('4', $event.checked)">Langue Française</mat-checkbox>
             </mat-list-item>
           </mat-list>
         </mat-expansion-panel>
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <mat-checkbox (change)="onCategoryChange(3, $event.checked)">Vidéos</mat-checkbox>
+              <mat-checkbox (change)="onCategoryChange('3', $event.checked)">Vidéos</mat-checkbox>
             </mat-panel-title>
           </mat-expansion-panel-header>
           <mat-list>
             <mat-list-item>
-              <mat-checkbox (change)="onCategoryChange(4, $event.checked)">Anciens</mat-checkbox>
+              <mat-checkbox (change)="onCategoryChange('7', $event.checked)">Langue Française</mat-checkbox>
             </mat-list-item>
             <mat-list-item>
-              <mat-checkbox (change)="onCategoryChange(5, $event.checked)">Récents</mat-checkbox>
+              <mat-checkbox (change)="onCategoryChange('6', $event.checked)">Langue Anglaise</mat-checkbox>
             </mat-list-item>
           </mat-list>
         </mat-expansion-panel>
