--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -19,7 +19,7 @@
       <h1><strong>{{ item.title }}</strong></h1>
       <h2>{{ item.subtitle }}</h2>
       <p><strong>Autheur(s) :</strong> {{ item.authors | json }}</p>
-      <p><strong>Edition :</strong> {{ item.editor | json }}</p>
+      <p><strong>Edition :</strong> {{ item.editor?.name| json }}</p>
       <p><strong>Description :</strong> {{ item.description }}</p>
       <p><strong>Prix :</strong> {{ item.regularPrice }} $</p>
       <p><strong>Pages :</strong> {{ item.pages }}</p>
@@ -27,7 +27,7 @@
       <p><strong>Année :</strong> {{ item.year }}</p>
       <p><strong>Version :</strong> {{ item.version }}</p>
       <p><strong>ISBN :</strong> {{ item.isbn13 }}</p>
-      <button mat-raised-button color="primary" (click)="goBackToListItems()">Retourner à la liste de {{ item.category }}</button>
+      <button mat-raised-button color="primary" (click)="goBackToListItems()">Retourner à la liste de {{ item.category.name }}</button>
     </div>
   </div>
   <h3 class="reviews-title" (click)="toggleShowReviews()">
