--- a/src/app/components/section/item/list-item/list-item.component.html
+++ b/src/app/components/section/item/list-item/list-item.component.html
@@ -28,4 +28,15 @@
     </mat-card>
     </div>
   </div>
+  <mat-paginator
+  #paginator
+  [length]="(totalItems$ | async) ?? 160"
+  [pageSize]="itemsPerPage"
+  [pageSizeOptions]="[12, 24, 36, 48]"
+  (page)="onPageChange($event)"
+  intlNextPageLabel="Page suivante"
+  intlPreviousPageLabel="Page précédente"
+  intlItemsPerPageLabel="Articles par page"
+></mat-paginator>
+
 </div>
