--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -27,7 +27,7 @@
       <p><strong>Année :</strong> {{ item.year }}</p>
       <p><strong>Version :</strong> {{ item.version }}</p>
       <p><strong>ISBN :</strong> {{ item.isbn13 }}</p>
-      <button mat-raised-button color="primary" (click)="goBackToListItems()">Retourner à la liste de {{ item.category.name }}</button>
+      <button mat-raised-button color="primary" (click)="goBackToListItems()">Retourner à la liste des articles de {{ item.category.name }}</button>
     </div>
   </div>
   <h3 class="reviews-title" (click)="toggleShowReviews()">
