fixed bug authors linked wording IAuthor in detail-item

--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -18,12 +18,12 @@
     <div class="detail-info">
       <h1><strong>{{ item.title }}</strong></h1>
       <h2>{{ item.subtitle }}</h2>
-      <p><strong>Autheur(s) :</strong> {{ item.authors | json }}</p>
-      <p><strong>Edition :</strong> {{ item.editor?.name| json }}</p>
+      <p><strong>Autheur(s) :</strong> {{ getAuthorNames(item.authors) }}</p>
+      <p><strong>Edition :</strong> {{ item.editor?.name }}</p>
       <p><strong>Description :</strong> {{ item.description }}</p>
       <p><strong>Prix :</strong> {{ item.regularPrice }} $</p>
       <p><strong>Pages :</strong> {{ item.pages }}</p>
-      <p><strong>Language :</strong> English</p>
+      <p><strong>Catégorie :</strong> {{ item.category.name }}</p>
       <p><strong>Année :</strong> {{ item.year }}</p>
       <p><strong>Version :</strong> {{ item.version }}</p>
       <p><strong>ISBN :</strong> {{ item.isbn13 }}</p>
