fixed bug for pagination with filters adding a pagination service

--- a/src/app/components/section/item/list-item/list-item.component.html
+++ b/src/app/components/section/item/list-item/list-item.component.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <mat-paginator
-    [length]="(totalItems$ | async) ?? 112"
+    [length]="(totalItems$ | async)"
     [pageSize]="itemsPerPage"
     [pageSizeOptions]="[12, 24, 36, 48]"
     (page)="onPageChange($event)"
