--- a/src/app/components/section/filters-item/filters-item.component.html
+++ b/src/app/components/section/filters-item/filters-item.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav mode="side" opened>
-    <div class="filter-section">
+    <div class="filter-section category-section">
       <h3>Catégories</h3>
       <mat-divider></mat-divider>
       <div>
