--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -3,7 +3,7 @@
     <div class="detail-image">
       <div class="image-wrapper">
         <img [src]="item.imageUrl" alt="{{ item.title }} cover image" />
-        <div *ngIf="item.newCollection" class="new-banner">New</div>
+        <div *ngIf="item.isNewCollection==true" class="new-banner">New</div>
       </div>
       <div class="rating">
         <mat-icon
