--- a/src/app/components/section/filters-item/filters-item.component.html
+++ b/src/app/components/section/filters-item/filters-item.component.html
@@ -75,6 +75,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <app-list-item></app-list-item>
+    <app-list-item-without-meilisearch></app-list-item-without-meilisearch>
+    <!-- <app-list-item></app-list-item> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
