displayed one page of items without meilisearch

--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
@@ -1,4 +1,4 @@
-/* .container {
+.container {
   margin: 1.11rem;
 }
 
@@ -75,4 +75,4 @@ mat-card-title {
 
 ::ng-deep .mat-select-min-line {
   font-size: 1.11rem;
-} */
+}
