--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -19,7 +19,7 @@
       <h1><strong>{{ item.title }}</strong></h1>
       <h2>{{ item.subtitle }}</h2>
       <p><strong>Autheur(s) :</strong> {{ getAuthorNames() }}</p>
-      <p><strong>Edition :</strong> {{ item.editor?.name }}</p>
+      <p><strong>Edition :</strong> {{ item.editor.name }}</p>
       <p><strong>Description :</strong> {{ item.description }}</p>
       <p><strong>Prix :</strong> {{ item.regularPrice }} $</p>
       <p><strong>Pages :</strong> {{ item.pages }}</p>
