--- a/src/app/components/section/item/detail-item/detail-item.component.css
+++ b/src/app/components/section/item/detail-item/detail-item.component.css
@@ -14,7 +14,10 @@
 }
 
 .detail-image {
-  max-width: 37.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 44rem;
 }
 
 .detail-image img {
@@ -22,6 +25,10 @@
   height: auto;
   object-fit: cover;
   border-radius: 0.25rem;
+}
+
+.adminActions {
+  padding-top: 3.3rem;
 }
 
 .new-banner {
