--- a/src/app/components/admin/admin-item/admin-item.component.html
+++ b/src/app/components/admin/admin-item/admin-item.component.html
@@ -13,7 +13,7 @@
         <mat-label>isbn13 du livre</mat-label>
         <input matInput formControlName="isbn13">
         <mat-error *ngIf="itemForm.get('isbn13')?.invalid && itemForm.get('isbn13')?.touched">
-          Un numéro isbn13 est requis.
+          Un numéro ISBN à 13 chiffres est requis.
         </mat-error>
       </mat-form-field>
 
@@ -49,9 +49,6 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-label>En stock</mat-label>
-      <mat-checkbox formControlName="inStock"></mat-checkbox>
-
       <mat-form-field>
         <mat-label>Quantité en stock</mat-label>
         <input matInput type="number" formControlName="quantityInStock">
@@ -60,33 +57,42 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Auteurs</mat-label>
-        <input matInput formControlName="authors">
-        <mat-error *ngIf="itemForm.get('authors')?.invalid && itemForm.get('authors')?.touched">
-          Veuillez renseigner un auteur, et si besoin utiliser des virgules pour les séparer.
-        </mat-error>
-      </mat-form-field>
+      <mat-accordion class="mat-elevation-z8">
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Auteurs
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <div formArrayName="authors">
+            <div *ngFor="let author of authors; let i = index">
+              <mat-checkbox [formControlName]="i">
+                {{author.firstname}} {{author.lastname}}
+              </mat-checkbox>
+            </div>
+            <mat-error *ngIf="itemForm.get('authors')?.invalid && itemForm.get('authors')?.touched">
+              Veuillez renseigner un auteur.
+            </mat-error>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
 
       <mat-form-field>
-        <mat-label>Éditeur</mat-label>
-        <input matInput formControlName="editor">
+          <mat-label>Éditeur</mat-label>
+          <select matNativeControl formControlName="editor">
+            <option *ngFor="let editor of editors" [value]="editor.id">
+              {{editor.name}}
+            </option>
+          </select>
         <mat-error *ngIf="itemForm.get('editor')?.invalid && itemForm.get('editor')?.touched">
           Un éditeur est requis.
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label>Catégorie</mat-label>
         <select matNativeControl formControlName="category">
-          <optgroup label="Livres">
-            <option value="4">Langue Française</option>
-            <option value="5">Langue Anglaise</option>
-          </optgroup>
-          <optgroup label="Vidéos">
-            <option value=">7">Langue Française</option>
-            <option value="6">Langue Anglaise</option>
-          </optgroup>
+          <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
         </select>
         <mat-error *ngIf="itemForm.get('category')?.invalid && itemForm.get('category')?.touched">
           La catégorie est requise.
@@ -109,7 +115,7 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field>
         <mat-label>Langue</mat-label>
         <select matNativeControl formControlName="language">
           <option value="french">Français</option>
@@ -128,14 +134,15 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-label>Nouvelle collection</mat-label>
+      <mat-label>Nouvelle collection </mat-label>
       <mat-checkbox formControlName="newCollection"></mat-checkbox>
 
     </mat-card-content>
 
-    <mat-card-actions>
+    <mat-card-actions class="button-row">
       <button mat-raised-button color="primary" (click)="onSubmit()">Soumettre</button>
       <button mat-raised-button color="warn" (click)="onReset()">Réinitialiser</button>
+      <button mat-raised-button color="accent" (click)="goBack()">Retour</button>
     </mat-card-actions>
   </form>
 </mat-card>
