--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -29,7 +29,7 @@
       <p><strong>Autheur(s) :</strong> {{ getAuthorNames() }}</p>
       <p><strong>Edition :</strong> {{ item.editor.name }}</p>
       <p><strong>Description :</strong> {{ item.description }}</p>
-      <p><strong>Prix :</strong> {{ item.regularPrice }} $</p>
+      <p><strong>Prix :</strong> {{ item.regularPrice }} €</p>
       <p><strong>Pages :</strong> {{ item.pages }}</p>
       <p><strong>Catégorie :</strong> {{ item.category.name }}</p>
       <p><strong>Année :</strong> {{ item.year }}</p>
