fixed bug for pre-selected checkbox in update item form

--- a/src/app/components/admin/admin-item/admin-item.component.html
+++ b/src/app/components/admin/admin-item/admin-item.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-elevation-z8">
+<mat-card class="mat-elevation-z8" *ngIf="item">
   <form [formGroup]="itemForm" (ngSubmit)="onSubmit()">
     <mat-card-content>
       <mat-form-field>
