--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
@@ -40,6 +40,9 @@ mat-card-image {
   cursor: pointer;
   color: #333;
   font-size: 0.9rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .rating {
