--- a/src/app/components/shared/cart-button/cart-button.component.html
+++ b/src/app/components/shared/cart-button/cart-button.component.html
@@ -1,11 +1,12 @@
-<button mat-icon-button color="primary" [disabled]="isMinusButtonDisabled" (click)="increaseItemQty($event)">
+<button mat-icon-button color="primary" [disabled]="isMinusButtonDisabled" (click)="decreaseItemQty($event)">
   <mat-icon>remove</mat-icon>
 </button>
 
-<span *ngIf="quantity$.getValue() > 0">{{ quantity$ | async }}</span>
+<span *ngIf="itemsQuantitiesByCard$.getValue() > 0">{{ itemsQuantitiesByCard$ | async }}</span>
 
-<mat-icon *ngIf="quantity$.getValue() === 0">shopping_cart</mat-icon>
+<mat-icon *ngIf="itemsQuantitiesByCard$.getValue() === 0">shopping_cart</mat-icon>
 
-<button mat-icon-button color="primary" (click)="increaseItemQty($event)">
+<button mat-icon-button color="primary" [disabled]="isPlusButtonDisabled" (click)="increaseItemQty($event)">
   <mat-icon>add</mat-icon>
 </button>
+
