--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -16,7 +16,7 @@
       </div>
       <!-- CART BUTTON-->
       <div class="adminActions" *ngIf="!isAdmin">
-        <app-cart-button></app-cart-button>
+        <app-cart-button [item]="item"></app-cart-button>
       </div>
       <div class="adminActions" *ngIf="isAdmin">
         <button mat-icon-button color="warn" (click)="deleteItem()">
