--- a/src/app/components/shared/cart-button/cart-button.component.html
+++ b/src/app/components/shared/cart-button/cart-button.component.html
@@ -1,12 +1,8 @@
-<button mat-icon-button color="primary" [disabled]="isMinusButtonDisabled" (click)="decreaseItemQty($event)">
-  <mat-icon>remove</mat-icon>
-</button>
-
-<span *ngIf="itemsQuantitiesByCard$.getValue() > 0">{{ itemsQuantitiesByCard$ | async }}</span>
-
-<mat-icon *ngIf="itemsQuantitiesByCard$.getValue() === 0">shopping_cart</mat-icon>
-
-<button mat-icon-button color="primary" [disabled]="isPlusButtonDisabled" (click)="increaseItemQty($event)">
-  <mat-icon>add</mat-icon>
-</button>
-
+<div class="cart-container">
+  <mat-icon>shopping_cart</mat-icon>
+  <mat-form-field (click)="$event.stopPropagation()">
+    <mat-select [(value)]="selectedQty" (selectionChange)="changeItemQty(selectedQty)">
+      <mat-option *ngFor="let number of numbers" [value]="number">{{number}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
