--- a/src/app/components/aside/aside.component.css
+++ b/src/app/components/aside/aside.component.css
@@ -5,9 +5,9 @@
 .cart-toolbar {
   background-color: #f5f5f5;
   color: #444;
-  height: 64px;
+  height: 4rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
@@ -15,17 +15,17 @@
   display: flex;
   align-items: center;
   position: relative;
-  margin-right: 2rem;
+  margin-right: 0.125rem;
 }
 
 .cart-button svg {
-  height: 24px;
-  width: 24px;
+  height: 1.5rem;
+  width: 1.5rem;
   fill: currentColor;
 }
 
 .cart-button .text-gray-400 {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 500;
   line-height: 1.5;
   color: #718096;
@@ -44,14 +44,21 @@
 }
 
 .cart-button .h-3 {
-  height: 12px;
+  height: 0.75rem;
 }
 
 .cart-button {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  margin-right: 3rem;
+  margin-right: 1.11rem;
+}
+
+.ping {
+  animation: blink 1s linear infinite;
+  padding: 0.625rem;
+  border-radius: 50%;
+  margin-right: 1.25rem;
 }
 
 @keyframes ping {
@@ -68,3 +75,10 @@
     opacity: 0;
   }
 }
+
+@keyframes blink {
+  0% {background-color: transparent;}
+  50% {background-color: #FF4080;}
+  100% {background-color: transparent;}
+}
+
