implemented cart drawer in navbar

--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -1,4 +1,7 @@
 <div class="container mt-5">
+  <button mat-icon-button (click)="closeClickedDrawer.emit()">
+    <mat-icon>close</mat-icon>
+  </button>
   <div align="right" class="mb-3">
     <button mat-raised-button (click)="checkout()" style="color: gold; padding: 10px 20px;">Checkout</button>
   </div>
